--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=postgresql://neondb_owner:npg_EGhHa6fTuL9B@ep-delicate-sun-aiqpwp6s-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-JWT_SECRET_KEY=your-super-secret-key
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+BETTER_AUTH_SECRET=your-super-secret-key
+NEXT_PUBLIC_BACKEND_URL=https://hamzasyed001122-phase-02-backend.hf.space
